new dark hover tab

--- a/style.css
+++ b/style.css
@@ -145,6 +145,10 @@ header {
 	transform: translatey(-16px);
 	box-shadow: 0 10px 10px rgba(0, 0, 0, 0.15);
 }
+.dark-mode .project-card:hover {
+	box-shadow: 0 10px 15px rgba(255, 255, 255, 0.08);
+}
+
 .project-card img {
 	width: 100%;
 	border-radius: 8px;
